[gd_scene load_steps=5 format=3 uid="uid://djjxsyr8y52x1"]

[ext_resource type="Script" uid="uid://dwh8hpsr4nhfu" path="res://scripts/player.gd" id="1_b0kkn"]
[ext_resource type="Texture2D" uid="uid://du0iqausc68f" path="res://sprites/Sheet_Survival.png" id="1_merdl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_onrkg"]
atlas = ExtResource("1_merdl")
region = Rect2(16, 16, 16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_merdl"]
radius = 8.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_b0kkn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_onrkg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_merdl")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3.5, 3.5)

[node name="UpRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, -16)
collision_mask = 16

[node name="DownRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)
collision_mask = 16

[node name="LeftRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(-16, 0)
collision_mask = 16

[node name="RightRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)
collision_mask = 16
